meshlab-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meshlab-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meshlab
spec:
  hosts:
  - "*"
  gateways:
  - meshlab-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: meshlab-ui
        port:
          number: 80
