meshlab_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meshlab-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meshlab
spec:
  hosts:
  - "*"
  gateways:
  - meshlab-gateway
  http:
  - match:
    - uri:
        exact: /ui
    route:
    - destination:
        host: meshlab-ui
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: meshlab-traffic-generator
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: meshlab-ext
spec:
  hosts:
  - ""  # <---- put istio ingress gateway ELB DNS name here
  ports:
  - number: 80
    name: http
    protocol: HTTP
